--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   "dependencies": {
     "colors": "^1.1.2",
     "filequeue": "^0.5.0",
+    "minimist": "^1.2.0",
     "mkdirp": "^0.5.1",
     "os": "^0.1.1",
     "request": "^2.83.0",
