--- a/package.json
+++ b/package.json
@@ -1,10 +1,11 @@
 {
   "name": "bwco-asset-downloader",
-  "version": "0.1.1",
+  "version": "0.2.0",
   "description": "Belle & Wissell, Co. Asset Downloader",
   "main": "download.js",
   "scripts": {
     "start": "node download.js",
+    "test": "node download.js --config config.test.json",
     "clean": "rm -rf temp"
   },
   "repository": {
@@ -22,10 +23,11 @@
     "filequeue": "^0.5.0",
     "minimist": "^1.2.0",
     "mkdirp": "^0.5.1",
+    "node-fetch": "^1.7.3",
     "os": "^0.1.1",
     "request": "^2.83.0",
     "request-progress": "^3.0.0",
-    "rimraf": "^2.6.2",
-    "xmlhttprequest": "^1.8.0"
+    "request-promise-native": "^1.0.5",
+    "rimraf": "^2.6.2"
   }
 }
