--- a/package.json
+++ b/package.json
@@ -21,13 +21,12 @@
   "dependencies": {
     "colors": "^1.1.2",
     "filequeue": "^0.5.0",
+    "fs-extra": "^5.0.0",
     "minimist": "^1.2.0",
-    "mkdirp": "^0.5.1",
     "node-fetch": "^1.7.3",
     "os": "^0.1.1",
     "request": "^2.83.0",
     "request-progress": "^3.0.0",
-    "request-promise-native": "^1.0.5",
-    "rimraf": "^2.6.2"
+    "request-promise-native": "^1.0.5"
   }
 }
