--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "download.js",
   "scripts": {
     "start": "node download.js",
-    "test": "node download.js --config config.test.json",
+    "test": "node download.js --config config.sds.json",
     "clean": "rm -rf temp"
   },
   "repository": {
@@ -20,7 +20,6 @@
   "homepage": "https://github.com/sccottt/bwco-asset-downloader",
   "dependencies": {
     "colors": "^1.1.2",
-    "filequeue": "^0.5.0",
     "fs-extra": "^5.0.0",
     "minimist": "^1.2.0",
     "node-fetch": "^1.7.3",
