--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "bwco-asset-downloader",
-  "version": "0.2.1",
+  "version": "0.3.0",
   "description": "Belle & Wissell, Co. Asset Downloader",
   "main": "download.js",
   "scripts": {
@@ -21,11 +21,19 @@
   "dependencies": {
     "colors": "^1.1.2",
     "fs-extra": "^5.0.0",
+    "log-box": "^0.4.3",
     "minimist": "^1.2.0",
     "node-fetch": "^1.7.3",
     "os": "^0.1.1",
     "request": "^2.83.0",
     "request-progress": "^3.0.0",
     "request-promise-native": "^1.0.5"
+  },
+  "log-box": {
+    "default": {
+      "style": "round",
+      "color": "cyan",
+      "textColor": "cyan"
+    }
   }
 }
