Add command name

--- a/package.json
+++ b/package.json
@@ -1,8 +1,9 @@
 {
   "name": "bwco-asset-downloader",
-  "version": "0.4.0",
+  "version": "0.4.1",
   "description": "Belle & Wissell, Co. Asset Downloader",
   "main": "download.js",
+  "bin": "download.js",
   "scripts": {
     "start": "node download.js",
     "clean": "rm -rf temp"
