--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "bwco-asset-downloader",
+  "name": "asset-downloader",
   "version": "0.4.2",
-  "description": "Belle & Wissell, Co. Asset Downloader",
+  "description": "Asset Downloader",
   "main": "download.js",
   "bin": {
     "download": "download.js"
@@ -12,14 +12,14 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/movingobjects/bwco-asset-downloader.git"
+    "url": "git+https://github.com/movingobjects/asset-downloader.git"
   },
-  "author": "Belle & Wissell, Co.",
+  "author": "Scott Thiessen",
   "license": "UNLICENSED",
   "bugs": {
-    "url": "https://github.com/movingobjects/bwco-asset-downloader/issues"
+    "url": "https://github.com/movingobjects/asset-downloader/issues"
   },
-  "homepage": "https://github.com/movingobjects/bwco-asset-downloader",
+  "homepage": "https://github.com/movingobjects/asset-downloader",
   "dependencies": {
     "colors": "^1.1.2",
     "fs-extra": "^5.0.0",
